--- a/src/views/alterarprojeto.ejs
+++ b/src/views/alterarprojeto.ejs
@@ -114,6 +114,7 @@
                     <tr>
                       <td> 
                         <input id="id" name="id" type="hidden" value=<%= projeto.ProjetoID %>> 
+                        <input name="placeholder" type="text" disabled value=<%= projeto.ProjetoID %>> 
                       </td>
                       <td>
                         <input type="text" name="nome" id="nome" max="100" placeholder="Ex. Implantação de um sistema ERP; Desenvolvimento de um novo produto; etc." value=<%= projeto.NomeProjeto %> required> 
