--- a/src/views/alterarprojeto.ejs
+++ b/src/views/alterarprojeto.ejs
@@ -165,10 +165,6 @@
                 </div>
                 <div class="status" id="funcdisponiveis">
                     <h1>Disponíveis</h1>
-                    <div class="todo" draggable="true">
-                      <button id="add_btn" data-target-modal="#todo_form" value="Bianca Sakihira" >Bianca Sakihira</button>
-                      <span class="close">&times;</span>
-                    </div>
                 </div>
             </div>
               </div>
@@ -181,7 +177,7 @@
     </div>
     <div id="overlay"></div>
 
-    <form>
+    <form action="/alocation">
       <div class="modal" id="todo_form">
           <div class="header">
               <div class="titlemodal">Bianca Sakihira</div>
