--- a/src/views/alterarprojeto.ejs
+++ b/src/views/alterarprojeto.ejs
@@ -176,90 +176,7 @@
       </div>
     </div>
     <div id="overlay"></div>
-
-    <form action="/alocation">
-      <div class="modal" id="todo_form">
-          <div class="header">
-              <div class="titlemodal">Bianca Sakihira</div>
-          </div>
-          <div class="body">
-              <h4>Participação no Projeto</h4>
-              <div id="datas">
-                <div class="datai">
-                  <p>Data de Início</p>
-                  <input type="date" id="inicial" name="inicial">
-                </div>
-                <div class="ignore">
-                  <input type="checkbox" name="ignorainicial" id="ignorainicial" onclick="disable()">
-                  <p>Não tem</p>
-              </div>
-              </div>
-              <div id="datas">
-                <div class="dataf">
-                  <p>Data de Fim</p>
-                  <input type="date" id="final" name="final">
-                </div>
-                <div class="ignore">
-                  <input type="checkbox" name="ignorafinal" id="ignorafinal" onclick="disable()">
-                  <p>Não tem</p>
-              </div>
-              </div>
-              <h4>Horas Mensais neste Projeto</h4>
-              <div id="meses">
-                <div class="hrs">
-                  <p>Janeiro</p>
-                  <input type="number" name="hrjan" class="hr jan">
-                </div>
-                <div class="hrs">
-                  <p>Fevereiro</p>
-                  <input type="number" name="hrfev" class="hr fev">
-                </div>
-                <div class="hrs">
-                  <p>Março</p>
-                  <input type="number" name="hrmar" class="hr mar">
-                </div>
-                <div class="hrs">
-                  <p>Abril</p>
-                  <input type="number" name="hrabr" class="hr abr">
-                </div>
-                <div class="hrs">
-                  <p>Maio</p>
-                  <input type="number" name="hrmai" class="hr mai">
-                </div>
-                <div class="hrs">
-                  <p>Junho</p>
-                  <input type="number" name="hrjun" class="hr jun">
-                </div>
-                <div class="hrs">
-                  <p>Julho</p>
-                  <input type="number" name="hrjul" class="hr jul">
-                </div>
-                <div class="hrs">
-                  <p>Agosto</p>
-                  <input type="number" name="hrago" class="hr ago">
-                </div>
-                <div class="hrs">
-                  <p>Setembro</p>
-                  <input type="number" name="hrset" class="hr set">
-                </div>
-                <div class="hrs">
-                  <p>Outubro</p>
-                  <input type="number" name="hrout" class="hr out">
-                </div>
-                <div class="hrs">
-                  <p>Novembro</p>
-                  <input type="number" name="hrnov" class="hr nov">
-                </div>
-                <div class="hrs">
-                  <p>Dezembro</p>
-                  <input type="number" name="hrdez" class="hr dez">
-                </div>
-              </div>
-              <div class="save">
-                <button class="btn modal-btn" data-target-modal="#todo_form">Salvar Alterações</button>
-              </div>
-          </div>
-      </div>
-    </form>
+    <div id="modal"></div>
+</form>
 </body>
 </html>
