--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -144,10 +144,12 @@
           <table>
             <thead>
               <tr>
-                <td>Código</td>
-                <td>Nome</td>
-                <td>Principal responsável</td>
-                <td>Governança</td>
+                <th>Código</th>
+                <th>Nome</th>
+                <th>Principal responsável</th>
+                <th>Governança</th>
+                <th>Editar</th>
+                <th>Deletar</th>
               </tr>
             </thead>
             <tbody id="tableProjects">
