--- a/src/views/tabelaFuncionarios.ejs
+++ b/src/views/tabelaFuncionarios.ejs
@@ -99,8 +99,8 @@
                   <td>Nome</td>
                   <td>Principal responsável</td>
                   <td>Governança</td>
-                  <td></td>
-                  <td></td>
+                  <td>Editar</td>
+                  <td>Deletar</td>
                 </tr>
               </thead>
               <tbody id="tableProjects">
@@ -126,8 +126,8 @@
                   <td>Horas para Projeto</td>
                   <td>Estado</td>
                   <td>Quantidade de Projetos</td>
-                  <td></td>
-                  <td></td>
+                  <td>Editar</td>
+                  <td>Deletar</td>
                 </tr>
               </thead>
               <tbody id="tableEmployees">
