--- a/src/views/novaFuncao.ejs
+++ b/src/views/novaFuncao.ejs
@@ -74,12 +74,7 @@
           <i class="fa-solid fa-bars"></i>
         </div>
         <!--Barra de pesquisa-->
-        <div class="search">
-          <label>
-            <input type="text" placeholder="Procure Aqui...">
-            <i class="fa-solid fa-magnifying-glass"></i>
-          </label>
-        </div>
+
         <div class="user">
           <img src="../Imagens/user_img.png" alt="">
         </div>
@@ -87,10 +82,10 @@
       <form action="/role" method="post">
         <div class="contents">
           <div class="container mt-5">
-            <div class="title func">
+            <div class="title">
               <!--Entidade de adicionar nova função-->
               <h1 class="adicionar-func">Adicionar nova função</h1>
-              <p>Insira aqui uma nova função para o funcionário (As informações aqui inseridas serão acessíveis na tela novo funcionário ou na edição de um funcionário atual).</p>
+              <p id="functext">Insira aqui uma nova função para o funcionário (As informações aqui inseridas serão acessíveis na tela novo funcionário ou na edição de um funcionário atual).</p>
             </div>
             <div class="rows">
               <div class="row1">
