--- a/src/views/novaGovernanca.ejs
+++ b/src/views/novaGovernanca.ejs
@@ -72,12 +72,7 @@
         <div class="toggle">
           <i class="fa-solid fa-bars"></i>
         </div>
-        <div class="search">
-          <label>
-            <input type="text" placeholder="Procure Aqui...">
-            <i class="fa-solid fa-magnifying-glass"></i>
-          </label>
-        </div>
+
         <div class="user">
           <img src="../Imagens/user_img.png" alt="">
         </div>
@@ -86,9 +81,9 @@
       <form action="/governance" method="post">
         <div class="contents">
           <div class="container mt-5">
-            <div class="title func">
+            <div class="title">
               <h1 class="adicionar-func">Adicionar nova Governança</h1>
-              <p>Insira aqui uma nova governanca (As informações aqui inseridas serão acessíveis na tela nova função e novo funcionario).</p>
+              <p id="functext">Insira aqui uma nova governanca (As informações aqui inseridas serão acessíveis na tela nova função e novo funcionario).</p>
             </div>
             <div class="rows">
               <div class="row1">
