--- a/src/views/tabelaFuncionarios.ejs
+++ b/src/views/tabelaFuncionarios.ejs
@@ -73,12 +73,7 @@
           <i class="fa-solid fa-bars"></i>
         </div>
         <!--Barra de pesquisa-->
-        <div class="search">
-          <label>
-            <input type="text" placeholder="Procure Aqui...">
-            <i class="fa-solid fa-magnifying-glass"></i>
-          </label>
-        </div>
+
         <div class="user">
           <img src="../Imagens/user_img.png" alt="">
         </div>
@@ -95,12 +90,12 @@
             <table>
               <thead>
                 <tr>
-                  <td>Código</td>
-                  <td>Nome</td>
-                  <td>Principal responsável</td>
-                  <td>Governança</td>
-                  <td>Editar</td>
-                  <td>Deletar</td>
+                  <th>Código</th>
+                  <th>Nome</th>
+                  <th>Principal responsável</th>
+                  <th>Governança</th>
+                  <th>Editar</th>
+                  <th>Deletar</th>
                 </tr>
               </thead>
               <tbody id="tableProjects">
