--- a/src/views/alterarfuncionario.ejs
+++ b/src/views/alterarfuncionario.ejs
@@ -73,12 +73,7 @@
         <div class="toggle">
           <i class="fa-solid fa-bars"></i>
         </div>
-        <div class="search">
-          <label>
-            <input type="text" placeholder="Procure Aqui...">
-            <i class="fa-solid fa-magnifying-glass"></i>
-          </label>
-        </div>
+
         <div class="user">
           <img src="../Imagens/user_img.png" alt="">
         </div>
@@ -86,7 +81,7 @@
       <!--Entidade de adicionar novo funcionario-->
         <div class="contents">
           <div class="container mt-5">
-            <div class="title func">
+            <div class="title">
               <h1 class="adicionar-func">Atualizar informações do funcionário</h1>
               <p>Atualize as informações conforme o necessário.</p>
             </div>
