--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -23,7 +23,7 @@
   <div class="container">
     <div class="navbar active">
       <ul>
-        <li>
+        <li id="logo">
           <a href="/home">
             <span class="icon">
               <img src="../Imagens/yamahalogo.svg">
@@ -71,14 +71,6 @@
       <div class="topbar">
         <div class="toggle">
           <i class="fa-solid fa-bars"></i>
-        </div>
-        <!--Barra de pesquisa-->
-        <div class="search">
-          <label>
-            <input type="text" placeholder="Procure Aqui...">
-            <i class="fa-solid fa-magnifying-glass"></i>
-          </label>
-
         </div>
         <div class="user">
           <img src="../Imagens/user_img.png" alt="">
@@ -139,7 +131,7 @@
             <h2>
               Acompanhamento de Projetos
             </h2>
-            <a href="/tabelaFuncionarios" class="btn">Ver Todos</a>
+            <a href="/tabelaFuncionarios" class="btn">Ver Tudo</a>
           </div>
           <table>
             <thead>
