CRUD Função e Governança

--- a/src/views/tabelaFuncionarios.ejs
+++ b/src/views/tabelaFuncionarios.ejs
@@ -130,5 +130,52 @@
             </table>
           </div>
         </div>
+        <!-- Tabela de Funções --> 
+        <div class="details">
+          <div class="projectlist project">
+            <div class="cardHeader">
+              <h2>
+                Funções
+              </h2>
+            </div>
+            <table>
+              <thead>
+                <tr>
+                  <th>Código</th>
+                  <th>Titulo</th>
+                  <th>Área</th>
+                  <th>Editar</th>
+                  <th>Deletar</th>
+                </tr>
+              </thead>
+              <tbody id="tableFunctions">
+              </tbody>
+            </table>
+          </div>
+        </div>
+        <!-- Tabela de Governanças-->
+        <div class="details">
+          <div class="projectlist project">
+            <div class="cardHeader">
+              <h2>
+                Governanças
+              </h2>
+            </div>
+            <table>
+              <thead>
+                <tr>
+                  <th>Código</th>
+                  <th>País</th>
+                  <th>Estado</th>
+                  <th>Endereço</th>
+                  <th>Editar</th>
+                  <th>Deletar</th>
+                </tr>
+              </thead>
+              <tbody id="tableGovernances">
+              </tbody>
+            </table>
+          </div>
+        </div>
 </body>
 </html>
