--- a/src/public/style.css
+++ b/src/public/style.css
@@ -1022,10 +1022,10 @@ thead
 #modal .btn 
 {
     padding: 0.5rem 1rem;
-    border: 1px solid #ccc;
     border-radius: 3px;
     cursor: pointer;
     outline: none;
+    width: 100%;
 }
 
 #modal .btn:active
@@ -1067,9 +1067,11 @@ thead
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0.5rem 1rem;
+    padding: 1rem 1.5rem;
+    font-size: 0.70em;
     background-color: rgba(0, 0, 0, 0.03);
     border-bottom: 1px solid #ccc;
+    color: var(--secundaria);
 }
 
 .body 
@@ -1104,7 +1106,7 @@ thead
 {
     font-size: 0.9em;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     margin: 0 0 10px;
 }   
 
@@ -1185,4 +1187,13 @@ td i {
 
 table input {
     pointer-events: all;
+}
+
+input {
+    border: 1px solid;
+}
+
+#datas p {
+    text-align: center;
+    margin-bottom: 10px;
 }
