--- a/src/views/alterarfunc.ejs
+++ b/src/views/alterarfunc.ejs
@@ -113,7 +113,9 @@
                     </tr>
                   </thead>
                 </table>
-                <button id="createFunction" class="btn" onclick="addToast()">Atualizar a Função</button>            
+                <div class="offset-4 col-8 mt-4">
+                <button id="createFunction" class="btn" onclick="addToast()">Atualizar a Função</button> 
+                </div>           
               </div>
       </form>
 
