--- a/src/views/alterargov.ejs
+++ b/src/views/alterargov.ejs
@@ -117,7 +117,9 @@
                     </tr>
                   </thead>
                 </table>
-                <button id="createGov" class="btn" onclick="addToast()">Atualizar a Governança.</button>
+                <div class="offset-4 col-8 mt-4">
+                <button id="createGov" class="btn" onclick="addToast()">Atualizar a Governança</button>
+                </div>
             </div>
       </form>
 
