--- a/src/views/alterarprojeto.ejs
+++ b/src/views/alterarprojeto.ejs
@@ -142,7 +142,9 @@
                   <tbody id="tableProjects">
                   </tbody>
                 </table>
+                <div class="offset-4 col-8 mt-4">
                 <button class="btn" onclick="addToastUpdate()">Atualizar projeto</button>
+                </div>
             </form>
               </div>
             </div>
